--- a/cmd/gobagit/gobagit.1
+++ b/cmd/gobagit/gobagit.1
@@ -44,7 +44,7 @@ Bags are ideal for digital content normally kept as a collection of files. They 
         Adds optional fetch file to bag. Expects path to fetch.txt file and flag manifetch
 
 .BR \-hash\fR
-        Hash algorithm used for manifest file when creating a bag [sha1, sha256, sha512, md5] (default "sha512")
+        Hash algorithm used for manifest file when creating a bag
 
 .BR \-header\fR
         Additional headers for bag-info.txt. Expects path to json file
@@ -53,10 +53,10 @@ Bags are ideal for digital content normally kept as a collection of files. They 
         Path to manifest file for optional fetch.txt file. Mandatory if fetch switch is used
 
 .BR \-output\fR
-        Output directory for bag. Used with create flag (default "bag_2019-07-21T001917")
+        Output directory for bag. Used with create flag
 
 .BR \-tagmanifest\fR
-        Hash algorithm used for tag manifest file [sha1, sha256, sha512, md5]
+        Hash algorithm used for tag manifest file
 
 .BR \-tar\fR
         Create a tar archive when creating a bag
