--- a/cmd/gobagit/gobagit.1
+++ b/cmd/gobagit/gobagit.1
@@ -1,4 +1,4 @@
-.\" Copyright (c) 2019, Steffen Fritz
+.\" Copyright (c) 2019-2022, Steffen Fritz
 .\"
 .\" %%%LICENSE_START(GPLv2+_DOC_FULL)
 .\" This is free documentation; you can redistribute it and/or
@@ -21,7 +21,7 @@
 .\" <http://www.gnu.org/licenses/>.
 .\" %%%LICENSE_END
 
-.TH gobagit 1 "July 2019" "version 0.4.0"
+.TH gobagit 1 "March 2022" "version 0.5.0"
 .SH NAME
 gobagit
 .SH SYNOPSIS
@@ -37,39 +37,38 @@ Bags are ideal for digital content normally kept as a collection of files. They 
 
 .SH FLAGS
 
-.BR \-create\fR
+.BR \--create,\ -C\fR
         Create bag. Expects path to source directory
 
-.BR \-fetch\fR
+.BR \--fetch,\ -F\fR
         Adds optional fetch file to bag. Expects path to fetch.txt file and flag manifetch
 
-.BR \-hash\fR
+.BR \--hash,\ -H\fR
         Hash algorithm used for manifest file when creating a bag
 
-.BR \-header\fR
+.BR \--header,\ -J\fR
         Additional headers for bag-info.txt. Expects path to json file
 
-.BR \-manifetch\fR
+.BR \--manifetch,\ -M\fR
         Path to manifest file for optional fetch.txt file. Mandatory if fetch switch is used
 
-.BR \-output\fR
+.BR \--output,\ -O\fR
         Output directory for bag. Used with create flag
 
-.BR \-tagmanifest\fR
+.BR \--tagmanifest,\ -t\fR
         Hash algorithm used for tag manifest file
 
-.BR \-tar\fR
+.BR \--tar,\ -T\fR
         Create a tar archive when creating a bag
 
-.BR \-v\fR
-        Verbose output
-
-.BR \-validate\fR
+.BR \--validate,\ -V\fR
         Validate bag. Expects path to bag
 
-.BR \-version\fR
-        Print version
+.BR \--verbose,\ -v\fR
+        Verbose output
 
+.BR \--version\fR
+        Print version
 
 
 .SH AUTHOR
